--- a/views/layouts/dark.hbs
+++ b/views/layouts/dark.hbs
@@ -4,11 +4,10 @@
     <title>App</title>
     <link rel='stylesheet' href='/style.css' />
   </head>
-  <body>
+  <body class='header-dark'>
 
     <header>
-      <h1>My personal page</h1>
-      <nav>
+      <nav class='nav-dark'>
         <a href='/'>Home</a>
         <a href='/about'>About</a>
         <a href='/contact'>Contact</a>
