--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,5 +1,5 @@
 <h2>Contact</h2>
-<form method='POST' action='/contact/send-message'>
+<form method='POST' action='/contact/send-message' enctype="multipart/form-data">
   {{#if isSent}}
     <div class='isSent'> The message has been sent! File {{file}} has been saved</div>{{/if}}
   {{#if isError}}
